--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 			</div>
 
 			<div class="row"><div class="col-md-12">
-					<ul class="list-inline text-center hidden-print">
+					<ul class="list-inline text-center hidden-print icons">
 						<li><a href="http://fi.linkedin.com/pub/risto-hietala/5/432/8a4/">
 								<i class="icon-linkedin-sign icon-2x"></i></a></li>
-						<li><a href="https://twitter.com/risto_hietala">
+						<li><a href="https://twitter.com/ristohietal">
 								<i class="icon-twitter-sign icon-2x"></i></a></li>
 						<li><a href="https://github.com/rhietala">
 								<i class="icon-github-sign icon-2x"></i></a></li>
@@ -188,17 +188,6 @@
 				<div class="col-sm-3 col-md-2">Swedish</div>
 				<div class="col-sm-9 col-md-10">Basic</div></div>
 
-			<div class="row"><div class="col-sm-12">
-					<h1>Military service</h1>
-			</div></div>
-			<div class="row entry">
-				<div class="col-sm-3 col-md-2">1/2003&ndash;1/2004</div>
-				<div class="col-sm-9 col-md-10">
-					<ul class="list-unstyled">
-						<li>Air Force Academy (Tikkakoski), Lapland Air Command (Rovaniemi)</li>
-						<li>Rank: Staff sergeant (ylikersantti)</li>
-					</ul>
-			</div></div>
 
 
 			<hr />
