--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					6/2004&ndash;9/2004
 				</div>
 				<div class="col-sm-9 col-md-10">
-					<h2><a href="http://www.msoy.fi/">Mäntsälän Sähkö Oy</a></h2>
+					<h2><a href="http://www.msoy.fi/">Mäntsälän Sähkö Oy</a></h2>
 					<ul class="list-unstyled">
 						<li>Junior computer technician, installation, support and maintenance
 							of infrastructure and customer appliances of ISP’s wireless
@@ -147,7 +147,7 @@
 			<div class="row entry">
 				<div class="col-sm-3 col-md-2">8/1999&ndash;5/2002</div>
 				<div class="col-sm-9 col-md-10">
-					<h2><a href="http://www.mantsalanlukio.fi/">Mäntsälä upper secondary school</a></h2>
+					<h2><a href="http://www.mantsalanlukio.fi/">Mäntsälä upper secondary school</a></h2>
 					<ul class="list-unstyled">
 						<li>Finnish matriculation examination.</li>
 			</ul></div></div>
