--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
 		<title>Risto Hietala - Curriculum vitae</title>
 
-		<!-- Bootstrap core CSS -->
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 		<link href="cv.css" rel="stylesheet">
@@ -22,8 +21,6 @@
 				</div>
 			</div>
 
-
-			<!-- yhteystiedot -->
 			<div class="row">
 				<div class="col-sm-6 col-md-8">
 					<address itemprop="address">
@@ -61,7 +58,6 @@
 
 			</div></div>
 
-			<!-- työkokemus -->
 			<div class="row"><div class="col-sm-12">
 					<h1>Work experience</h1>
 			</div></div>
@@ -111,7 +107,7 @@
 					6/2004&ndash;9/2004
 				</div>
 				<div class="col-sm-9 col-md-10">
-					<h2><a href="http://www.msoy.fi/">Mäntsälän Sähkö Oy</a></h2>
+					<h2><a href="http://www.msoy.fi/">Mäntsälän Sähkö Oy</a></h2>
 					<ul class="list-unstyled">
 						<li>Junior computer technician, installation, support and maintenance
 							of infrastructure and customer appliances of ISP’s wireless
