--- a/cv.html
+++ b/cv.html
@@ -8,9 +8,9 @@
     <title>Risto Hietala - Curriculum vitae</title>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
     <link href="cv.css" rel="stylesheet">
-
+    <script src="https://use.fontawesome.com/8e96147e4a.js"></script>
   </head>
 
   <body>
@@ -40,7 +40,7 @@
 
         <div class="col-sm-6 col-md-4">
           <ul class="list-unstyled">
-            <li>Updated: 21.9.2016</li>
+            <li>Updated: 6.5.2017</li>
             <li>&nbsp;</li>
             <li>Birth: <span itemprop="birthDate">13.9.1983</span> (Mäntsälä, Finland)</li>
           </ul>
@@ -49,14 +49,16 @@
 
       <div class="row"><div class="col-md-12">
           <ul class="list-inline text-center hidden-print icons">
+            <li><a href="http://www.hietala.org/">
+                <i class="fa fa-bookmark fa-2x"></i></a></li>
             <li><a href="http://fi.linkedin.com/pub/risto-hietala/5/432/8a4/">
-                <i class="icon-linkedin-sign icon-2x"></i></a></li>
+                <i class="fa fa-linkedin-square fa-2x"></i></a></li>
             <li><a href="https://twitter.com/ristohietal">
-                <i class="icon-twitter-sign icon-2x"></i></a></li>
+                <i class="fa fa-twitter-square fa-2x"></i></a></li>
             <li><a href="https://github.com/rhietala">
-                <i class="icon-github-sign icon-2x"></i></a></li>
+                <i class="fa fa-github-square fa-2x"></i></a></li>
             <li><a href="mailto:risto.hietala@gmail.com">
-                <i class="icon-envelope icon-2x"></i></a></li>
+                <i class="fa fa-envelope fa-2x"></i></a></li>
           </ul>
 
       </div></div>
@@ -67,10 +69,11 @@
       <div class="row entry">
         <div class="col-sm-3">2/2014&ndash;present</div>
         <div class="col-sm-9">
-          <h2><a href="http://www.kumea.fi/">Leonidas Oy</a></h2>
+          <h2><a href="http://www.leonidasoy.fi/">Leonidas Oy</a></h2>
           <ul class="list-unstyled">
-            <li>Programmer, Ruby on Rails and Javascript development, some
-              Tcl and some Python also.</li>
+            <li>Programmer, TypeScript, JavaScript, Ruby on Rails development in
+              various projects with different customers. Full-stack leaning
+              to backend.</li>
       </ul></div></div>
 
       <div class="row entry">
@@ -130,7 +133,7 @@
           <h1>Education</h1>
       </div></div>
       <div class="row entry">
-        <div class="col-sm-3">1/2004&ndash;present</div>
+        <div class="col-sm-3">1/2004&ndash;12/2016</div>
         <div class="col-sm-9">
           <h2><a href="http://www.aalto.fi/fi/">Aalto University</a></h2>
           <ul class="list-unstyled">
@@ -138,9 +141,9 @@
               Engineering.</li>
             <li>Major subject: Telecommunications management, minor subject:
               Software technology.</li>
-            <li>Master’s thesis subject: Packet synchronization test automation
-              (not finished).</li>
-            <li>Credits: 181 / 180.</li>
+            <li>Master's thesis:
+              <a href="https://aaltodoc.aalto.fi/handle/123456789/23251">
+                Packet synchronization test automation.</a></li>
           </ul>
       </div></div>
 
@@ -167,22 +170,27 @@
       <div class="row entry">
         <div class="col-sm-3">Programming</div>
         <div class="col-sm-9">
-          Ruby, Javascript, Tcl, Clojure, Python, Perl, Java
+          TypeScript, Ruby, JavaScript, Tcl, Clojure, Python, Perl, Java
+      </div></div>
+      <div class="row entry">
+        <div class="col-sm-3">Databases</div>
+        <div class="col-sm-9">
+          PostgreSQL, MySQL / MariaDB, AWS DynamoDB, CouchDB
       </div></div>
       <div class="row entry">
         <div class="col-sm-3">DevOps</div>
         <div class="col-sm-9">
-          Ansible, Capistrano, Vagrant
+          Amazon Web Services, Ansible, Capistrano, Vagrant
       </div></div>
       <div class="row entry">
         <div class="col-sm-3">OSes</div>
         <div class="col-sm-9">
-          Debian, Centos, Solaris 10, RedHat Enterprise Linux 4
+          Debian, CentOS, Solaris, RedHat Enterprise Linux
       </div></div>
       <div class="row entry">
         <div class="col-sm-3">Networks</div>
         <div class="col-sm-9">
-          Synchronization, E-mail, TCP/IP, testing
+          Synchronization, e-mail, TCP/IP, testing
       </div></div>
 
       <div class="row"><div class="col-sm-12">
