--- a/cv.html
+++ b/cv.html
@@ -29,18 +29,18 @@
           <address itemprop="address">
             <strong><span itemprop="givenName">Risto</span>
               <span itemprop="familyName">Hietala</span></strong><br />
-            <span itemprop="streetAddress">Lapintie 6 D 28</span><br />
-            <span itemprop="postalCode">33100</span>
+            <span itemprop="streetAddress">Teiskontie 14 G 118</span><br />
+            <span itemprop="postalCode">33540</span>
             <span itemprop="addressLocality">Tampere</span>,
             <span itemprop="addressCountry">Finland</span><br />
-            <abbr title="Telephone">Tel</abbr>:
+            Tel:
             <span itemprop="telephone">+358 44 054 5705</span>
           </address>
         </div>
 
         <div class="col-sm-6 col-md-4">
           <ul class="list-unstyled">
-            <li>Updated: 6.5.2017</li>
+            <li>Updated: 23.6.2021</li>
             <li>&nbsp;</li>
             <li>Birth: <span itemprop="birthDate">13.9.1983</span> (Mäntsälä, Finland)</li>
           </ul>
@@ -57,7 +57,7 @@
                 <i class="fa fa-twitter-square fa-2x"></i></a></li>
             <li><a href="https://github.com/rhietala">
                 <i class="fa fa-github-square fa-2x"></i></a></li>
-            <li><a href="mailto:risto.hietala@gmail.com">
+            <li><a href="mailto:risto@hietala.org">
                 <i class="fa fa-envelope fa-2x"></i></a></li>
           </ul>
 
@@ -67,14 +67,31 @@
           <h1>Work experience</h1>
       </div></div>
       <div class="row entry">
-        <div class="col-sm-3">2/2014&ndash;present</div>
+        <div class="col-sm-3">2/2018&ndash;present</div>
+        <div class="col-sm-9">
+          <h2><a href="https://wildfrost.fi/">Wildfrost Oy</a></h2>
+          <ul class="list-unstyled">
+            <li>Programmer, web development with TypeScript and JavaScript, DevOps with
+              Ansible.</li>
+          </ul></div></div>
+
+      <div class="row entry">
+        <div class="col-sm-3">7/2017&ndash;2/2018</div>
+        <div class="col-sm-9">
+          <h2><a href="https://www.happy-or-not.com/">HappyOrNot Oy</a></h2>
+          <ul class="list-unstyled">
+            <li>Programmer, backend and data engineering with Scala and PostgreSQL.</li>
+          </ul></div></div>
+
+      <div class="row entry">
+        <div class="col-sm-3">2/2014&ndash;7/2017</div>
         <div class="col-sm-9">
           <h2><a href="http://www.leonidasoy.fi/">Leonidas Oy</a></h2>
           <ul class="list-unstyled">
             <li>Programmer, TypeScript, JavaScript, Ruby on Rails development in
               various projects with different customers. Full-stack leaning
               to backend.</li>
-      </ul></div></div>
+          </ul></div></div>
 
       <div class="row entry">
         <div class="col-sm-3">5/2011&ndash;present</div>
@@ -91,14 +108,14 @@
           <h2><a href="http://www.tellabs.com/fi/">Tellabs Oy</a></h2>
           <ul class="list-unstyled">
             <li>Engineer, test tools, automation, code review, synchronization
-              testing.</li>
+              testing with Tcl.</li>
             <li>Trainee, synchronization testing.</li>
       </ul></div></div>
 
       <div class="row entry">
         <div class="col-sm-3">5/2008&ndash;12/2008</div>
         <div class="col-sm-9">
-          <h2><a href="http://www.teliasonera.com/fi/">TeliaSonera Finland Oyj</a></h2>
+          <h2><a href="https://www.telia.fi/">TeliaSonera Finland Oyj</a></h2>
           <ul class="list-unstyled">
             <li>Trainee, middleware, consumer e-mail platform support and
               configuration.</li>
@@ -107,7 +124,7 @@
       <div class="row entry">
         <div class="col-sm-3">7/2007&ndash;9/2007</div>
         <div class="col-sm-9">
-          <h2><a href="http://lsirwww.epfl.ch/">
+          <h2><a href="https://www.epfl.ch/labs/lsir/">
               <abbr title="École Polytechnique Fédérale de Lausanne">EPFL</abbr>,
               Distributed Information Systems Laboratory</h2></a>
           <ul class="list-unstyled">
@@ -122,7 +139,7 @@
           6/2004&ndash;9/2004
         </div>
         <div class="col-sm-9">
-          <h2><a href="http://www.msoy.fi/">Mäntsälän Sähkö Oy</a></h2>
+          <h2><a href="https://www.nivos.fi/">Mäntsälän Sähkö Oy</a></h2>
           <ul class="list-unstyled">
             <li>Junior computer technician, installation, support and maintenance
               of infrastructure and customer appliances of ISP’s wireless
@@ -139,8 +156,8 @@
           <ul class="list-unstyled">
             <li>Master of Science in Technology, degree programme of Communications
               Engineering.</li>
-            <li>Major subject: Telecommunications management, minor subject:
-              Software technology.</li>
+            <li>Major subject: Telecommunications management.</li>
+            <li>Minor subject: Software technology.</li>
             <li>Master's thesis:
               <a href="https://aaltodoc.aalto.fi/handle/123456789/23251">
                 Packet synchronization test automation.</a></li>
@@ -170,30 +187,30 @@
       <div class="row entry">
         <div class="col-sm-3">Programming</div>
         <div class="col-sm-9">
-          TypeScript, Ruby, JavaScript, Tcl, Clojure, Python, Perl, Java
+          TypeScript, Python, Rust, Ruby, JavaScript, Clojure, Perl, Java
       </div></div>
       <div class="row entry">
         <div class="col-sm-3">Databases</div>
         <div class="col-sm-9">
-          PostgreSQL, MySQL / MariaDB, AWS DynamoDB, CouchDB
+          MySQL / MariaDB, Elasticsearch, PostgreSQL, AWS DynamoDB, CouchDB
       </div></div>
       <div class="row entry">
         <div class="col-sm-3">DevOps</div>
         <div class="col-sm-9">
-          Amazon Web Services, Ansible, Capistrano, Vagrant
-      </div></div>
-      <div class="row entry">
-        <div class="col-sm-3">OSes</div>
-        <div class="col-sm-9">
-          Debian, CentOS, Solaris, RedHat Enterprise Linux
+          Ansible, Amazon Web Services, Docker, Vagrant
       </div></div>
       <div class="row entry">
         <div class="col-sm-3">Networks</div>
         <div class="col-sm-9">
           Synchronization, e-mail, TCP/IP, testing
-      </div></div>
+        </div></div>
+        <div class="row entry">
+          <div class="col-sm-3">Others</div>
+          <div class="col-sm-9">
+            Debian, HAProxy
+        </div></div>
 
-      <div class="row"><div class="col-sm-12">
+          <div class="row"><div class="col-sm-12">
           <h1>Language skills</h1>
       </div></div>
       <div class="row entry">
