--- a/misc/cv.html
+++ b/misc/cv.html
@@ -72,7 +72,7 @@
           <h2><a href="https://wildfrost.fi/">Wildfrost Oy</a></h2>
           <ul class="list-unstyled">
             <li>Programmer, web development with TypeScript and JavaScript, DevOps with
-              Ansible.</li>
+              Ansible, data engineering with Elasticsearch and MariaDB.</li>
           </ul></div></div>
 
       <div class="row entry">
@@ -89,7 +89,7 @@
           <h2><a href="http://www.leonidasoy.fi/">Leonidas Oy</a></h2>
           <ul class="list-unstyled">
             <li>Programmer, TypeScript, JavaScript, Ruby on Rails development in
-              various projects with different customers. Full-stack leaning
+              various projects with different customers. Full stack leaning
               to backend.</li>
           </ul></div></div>
 
@@ -118,7 +118,7 @@
           <h2><a href="https://www.telia.fi/">TeliaSonera Finland Oyj</a></h2>
           <ul class="list-unstyled">
             <li>Trainee, middleware, consumer e-mail platform support and
-              configuration.</li>
+              configuration. Perl scripting.</li>
       </ul></div></div>
 
       <div class="row entry">
@@ -129,7 +129,7 @@
               Distributed Information Systems Laboratory</h2></a>
           <ul class="list-unstyled">
             <li>Research student, open-source sensor networks project
-              development.</li>
+              development with Java.</li>
       </ul></div></div>
 
       <div class="row entry">
