--- a/misc/cv.html
+++ b/misc/cv.html
@@ -187,7 +187,7 @@
       <div class="row entry">
         <div class="col-sm-3">Programming</div>
         <div class="col-sm-9">
-          TypeScript, Python, Rust, Ruby, JavaScript, Clojure, Perl, Java
+          TypeScript, Python, Scala, Rust, Ruby, JavaScript, Clojure, Perl, Java
       </div></div>
       <div class="row entry">
         <div class="col-sm-3">Databases</div>
@@ -197,7 +197,7 @@
       <div class="row entry">
         <div class="col-sm-3">DevOps</div>
         <div class="col-sm-9">
-          Ansible, Amazon Web Services, Docker, Vagrant
+          Ansible, Amazon Web Services (AWS), Docker, Vagrant
       </div></div>
       <div class="row entry">
         <div class="col-sm-3">Networks</div>
