--- a/misc/cv.html
+++ b/misc/cv.html
@@ -72,7 +72,7 @@
           <h2><a href="https://wildfrost.fi/">Wildfrost Oy</a></h2>
           <ul class="list-unstyled">
             <li>Programmer, web development with TypeScript and JavaScript, DevOps with
-              Ansible, data engineering with Elasticsearch and MariaDB.</li>
+              Ansible, data with Elasticsearch and MariaDB.</li>
           </ul></div></div>
 
       <div class="row entry">
@@ -80,7 +80,7 @@
         <div class="col-sm-9">
           <h2><a href="https://www.happy-or-not.com/">HappyOrNot Oy</a></h2>
           <ul class="list-unstyled">
-            <li>Programmer, backend and data engineering with Scala and PostgreSQL.</li>
+            <li>Programmer, backend with Scala, data with PostgreSQL.</li>
           </ul></div></div>
 
       <div class="row entry">
